fixed alignment issues with nav links

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App{
+.container{
     margin-left: 150px;
     margin-right: 150px;
     margin-top: 40px;
